made all the changes

--- a/user-registration/index.html
+++ b/user-registration/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Site CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Responsive CSS -->
+    <!-- Responsive CSS --> 
     <link rel="stylesheet" href="css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
@@ -21,15 +21,18 @@
 	<header id="main-header">
 		<div class="logo"><img src="images/logo.png">
 		</div>
-		<h1>My Website.</h1>
+		<h1>VIP Travels</h1>
 	</header>
-	<nav id="navbar">
+	<nav class="navbar">
 		<ul>
             <?php include 'login.php';?>
+            <?php include 'user-registeration.php';?>
 			<li><a href="">search</a></li>
-			<li><a href="">contact</a></li>
+			<li><a  href="contact.html">contact</a></li>
+			<li><a href="about.html">about</a></li>
+			<div class="log">
 			<li><a href="login.php">login</a></li>
-			<li><a href="">about</a></li>
+			<li><a href="user-registeration.php">sign up</a></li>
 		</ul>
 	</nav>
 	<!-- End copyright  
@@ -48,9 +51,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br> VAP TRAVELLS</strong></h1>
+                            <h1 class="m-b-20"><strong>Welcome To <br> VIP TRAVELS</strong></h1>
                             <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="#">Book Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -60,9 +63,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br> VAP TRAVELLS</strong></h1>
+                            <h1 class="m-b-20"><strong>Welcome To <br> VIP TRAVELS</strong></h1>
                             <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="#">Book Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -72,9 +75,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br> VAP TRAVELLS</strong></h1>
+                            <h1 class="m-b-20"><strong>Welcome To <br> VIP TRAVELS</strong></h1>
                             <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="#">Book Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -86,25 +89,65 @@
         </div>
     </div>
     <!-- End Slider -->
-	<div class="container">
+	<div>
 		<section id="main">
-			<h1>Welcome,</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</section>
-		<aside class="aside">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-		</aside>
+			<div class="container">
+				<h1>Welcome,</h1>
+
+				<br>
+
+				<p><span class="head">Find the best travel packages at VIP Travels</span></p>
+				<p>Booking a travel package when it comes to travelling to new parts of the country or the world is a practice that has slowly gained a lot of popularity. Today, whenever it is about planning a holiday trip, many people have a preferred travel portal in India that is best for their specific needs. Owing to the faith bestowed in our travel services by our patrons, VIP Travels has established its niche and is counted among the top 10 travel agencies in Mumbai.</p> 
+
+				<br>
+
+				<p>We at VIP Travels understand that nowadays, travelling has become much more than just visiting a new destination. That is why each of our vacation packages offers you the respite that you anticipate from a holiday. As a well-informed traveller, it is only right to expect more from your travel company in India - we strive to ensure the same for our customers. It is no longer about only conveyance and accommodation. For those who enjoy travelling, the best travel packages are those which can offer them holistic holiday experiences. That is exactly what you get when you opt for the best travel company in Mumbai – VIP Travels.</p>
+
+				<br>
+
+				<p>Counted among the top 10 travel agencies in Mumbai, VIP Travels has all the travel services under one roof. In our constant endeavour to be the best travel company in India, everything that we do is based on creating and setting new benchmarks. With extensive travel know-how, end-to-end travel planning and a wide assortment of travel packages, we are counted among the best travel agents in India that ensure the best holiday experiences.</p>
+
+				<br>
+				<br>
+
+				<p><span class="head">What makes us one of the best travel companies in India?</span></p>
+				<p>We, at VIP Travels, know that there is nothing better than the experiences and memories you are able to create when you travel to new places with our holiday packages. With VIP Travels packages, you can head out and indulge in the exploration of an unknown destination or revisit your favourite spots in places that hold a lot of memories, you can meet new people from various walks of life, and mark another spot on the map that you have covered; there is nothing better than travel.</p>
+
+				<br>
+
+				<p>We understand exactly what a simple trip can mean to a person and that is why we have created specially curated travel packages to ensure that you can have the most memorable experience possible. Travel the world with VIP Hospitality as you can find the best of tour packages at VIP Travels to suit any and every travelling need.</p> 
+
+				<br>
+
+				<p>Whether you want to head out for a solo trip or travel with a bunch of like-minded people, VIP Travels, one of the best travel companies in India, has got you covered. Recognized among the best travel companies in Mumbai and the whole of the country, we offer customised and bespoke services whenever you book holiday packages online with us. Regardless of the duration or destination you choose, our personal touch in every itinerary ensures that every tour is a speciality. Being one of the most well-known travel companies in India, we care about delivering great holiday experiences.</p>
+
+				<br>
+
+				<p>All you have to do is book your holiday packages online at VIP Travels. After that, get ready for the vacation of a lifetime. The attention we put into crafting each package is one of the reasons why we are regarded as the best travel portal in India.</p> 
+
+	 			<br>
+	 			<br>
+
+				<p><span class="head">Bringing you the best travel packages online</span></p>
+				<p>Making a niche for ourselves as a top online travel company in India, VIP Travels excels in offering the best in domestic and international tour packages. Our product offerings include guided group tours, speciality tours, exclusive customised holiday packages, corporate MICE travel, and inbound travel. Behind our repute of being the best travel company in India is the vision to provide exclusivity in our tailor-made tours and packages that take you to a huge number of destinations in India and all around the world. Our travel company in India offers speciality tour packages such as Women’s Special, Honeymoon Tours, Seniors’ Packages, Singles Tour Packages, and Weekend Tours, which has helped us differentiate our offerings from other travel companies in Mumbai in both the domestic and international sectors. We offer a wide array of more than 2500 dream vacation options as well as a guest base of more than 2.5 lakh satisfied guests in a period of 6 years, which has played a major role in us becoming one of the top travel companies in Mumbai.</p>
+			</section>
+			<!--<aside class="aside">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+			</aside>-->
+		</div>
 	</div>
 
 	<footer id="main-footer">
-		<p>My Website &copy; copyright</p>
+		<div class="footer-logo">
+			<img src="images/footer-logo.png">
+			<h3>VIP Travels  <span class="footer-span">#CELEBRATE LIFE<span></h3>
+		</div>
+		<div class="footer-company">
+			<p>Building a legacy of redefining travel, inspiring to explore and sharing reasons to celebrate life!</p>
+		</div>
+		
 	</footer>
 	
 	<!-- ALL JS FILES -->
