--- a/user-registration/index.html
+++ b/user-registration/index.html
@@ -26,13 +26,13 @@
 	<nav class="navbar">
 		<ul>
             <?php include 'login.php';?>
-            <?php include 'user-registeration.php';?>
+            <?php include 'user-registration.php';?>
 			<li><a href="">search</a></li>
 			<li><a  href="contact.html">contact</a></li>
 			<li><a href="about.html">about</a></li>
 			<div class="log">
 			<li><a href="login.php">login</a></li>
-			<li><a href="user-registeration.php">sign up</a></li>
+			<li><a href="user-registration.php">sign up</a></li>
 		</ul>
 	</nav>
 	<!-- End copyright  
@@ -53,7 +53,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> VIP TRAVELS</strong></h1>
                             <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Book Now</a></p>
+                            <p><a class="btn hvr-hover" href="/htdocs/index.php">Book Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> VIP TRAVELS</strong></h1>
                             <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Book Now</a></p>
+                            <p><a class="btn hvr-hover" href="/htdocs/index.php">Book Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> VIP TRAVELS</strong></h1>
                             <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Book Now</a></p>
+                            <p><a class="btn hvr-hover" href="/htdocs/index.php">Book Now</a></p>
                         </div>
                     </div>
                 </div>
